src/main/java/com/example/finance7/error/exceptions/UserNotFoundException.java
package com.example.finance7.error.exceptions;

public class UserNotFoundException extends RuntimeException {
}
